Fix top/bottom spacing homepage

--- a/css/_sass/_home.scss
+++ b/css/_sass/_home.scss
@@ -17,7 +17,7 @@ header {
 }
 
 .site-wrapper {
-   padding: 1em;
+   padding: 3em 1em;
    max-width: 640px;
    font-size: 1.125em;
 }
